Colaboratory를 통해 생성됨

--- a/[해설]Ch04_python연산자.ipynb
+++ b/[해설]Ch04_python연산자.ipynb
@@ -73,7 +73,7 @@
         "a = 10\n",
         "b = 3"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -89,16 +89,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "GRJdclDnkl0v",
-        "outputId": "7f365ee8-354e-4e3a-b379-6e2dc0e70a87",
+        "outputId": "b9805106-7d40-485b-806f-aa5cd8e4a211",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
+          "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
         "a + b"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -107,9 +106,7 @@
               "13"
             ]
           },
-          "metadata": {
-            "tags": []
-          },
+          "metadata": {},
           "execution_count": 2
         }
       ]
@@ -118,16 +115,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "M3NXutOf2k9O",
-        "outputId": "8f4abe52-ba8d-43c7-e9d4-5c241ae005c6",
+        "outputId": "c1141616-857b-486d-dd15-d8af6940643b",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
+          "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
         "10 + 234"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -136,9 +132,7 @@
               "244"
             ]
           },
-          "metadata": {
-            "tags": []
-          },
+          "metadata": {},
           "execution_count": 3
         }
       ]
@@ -156,16 +150,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "fZtYiLERkrr0",
-        "outputId": "56f66e6f-de8d-48a8-b507-fdadc814e7e0",
+        "outputId": "8ace2694-14af-4b7d-f1a2-77406856e47d",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
+          "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
         "a - b"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -174,9 +167,7 @@
               "7"
             ]
           },
-          "metadata": {
-            "tags": []
-          },
+          "metadata": {},
           "execution_count": 4
         }
       ]
@@ -194,16 +185,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "2a24yJmtk2Ha",
-        "outputId": "df6760b1-63b6-4c4b-a7f4-d074bc6118b0",
+        "outputId": "453a3c5e-556b-42e4-b9b0-f4bc54864731",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
+          "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
         "a / b"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -212,9 +202,7 @@
               "3.3333333333333335"
             ]
           },
-          "metadata": {
-            "tags": []
-          },
+          "metadata": {},
           "execution_count": 5
         }
       ]
@@ -232,16 +220,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "MhOHnVNVk4iu",
-        "outputId": "12dcedc1-7ed1-40e6-9eae-e9b295c86122",
+        "outputId": "0b947b5d-5857-42cf-d7b3-db7fa599a444",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
+          "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
         "a * b"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -250,9 +237,7 @@
               "30"
             ]
           },
-          "metadata": {
-            "tags": []
-          },
+          "metadata": {},
           "execution_count": 6
         }
       ]
@@ -286,7 +271,7 @@
         "a = 10\n",
         "b = 3"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -302,16 +287,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "woV-i1v5lrcP",
-        "outputId": "ee710759-5cf1-47e1-a4dc-d4c8be79b8de",
+        "outputId": "660b0e15-d98b-40ea-aa4b-28d5cce8a3e4",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
+          "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
         "a % b"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -320,9 +304,7 @@
               "1"
             ]
           },
-          "metadata": {
-            "tags": []
-          },
+          "metadata": {},
           "execution_count": 8
         }
       ]
@@ -340,16 +322,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "r3dQQsz-3E0Y",
-        "outputId": "e5f71916-76ec-41d5-8076-8a7a7ea30425",
+        "outputId": "1d05e868-953e-40fb-80a4-ba314859d52c",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
+          "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
         "a / b"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -358,9 +339,7 @@
               "3.3333333333333335"
             ]
           },
-          "metadata": {
-            "tags": []
-          },
+          "metadata": {},
           "execution_count": 9
         }
       ]
@@ -369,16 +348,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "KmmZxa_6mBWs",
-        "outputId": "bac33dc9-b607-4779-927f-a80c977ca6c7",
+        "outputId": "a75560a1-41a6-4580-d8f8-d1591acb4616",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
+          "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
         "a // b"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -387,9 +365,7 @@
               "3"
             ]
           },
-          "metadata": {
-            "tags": []
-          },
+          "metadata": {},
           "execution_count": 10
         }
       ]
@@ -407,16 +383,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "PI2Cb9V_mFvG",
-        "outputId": "c2e5e683-8d31-44a4-9920-9149f17e42cf",
+        "outputId": "dfbb4fc3-0af2-4612-e55e-81fdf7746357",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
+          "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
         "a ** b"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -425,10 +400,8 @@
               "1000"
             ]
           },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 12
+          "metadata": {},
+          "execution_count": 11
         }
       ]
     },
@@ -436,16 +409,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "AkltfELfmGwJ",
-        "outputId": "e989e257-8ad3-43e3-84cf-ad88c366b4e9",
+        "outputId": "f3f6743c-7fb1-4178-86e7-70b680241859",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
+          "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
         "10 ** 2"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -454,10 +426,8 @@
               "100"
             ]
           },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 11
+          "metadata": {},
+          "execution_count": 12
         }
       ]
     },
@@ -474,16 +444,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "uHDJHp7Vmflc",
-        "outputId": "246457a9-db99-4273-a4fd-009d34cea5c2",
+        "outputId": "3ede6259-2478-45f0-a288-9e9a098f0add",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
+          "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
         "10 + 2 * 5"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -492,10 +461,8 @@
               "20"
             ]
           },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 15
+          "metadata": {},
+          "execution_count": 13
         }
       ]
     },
@@ -503,16 +470,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "XkFs622Ymqwq",
-        "outputId": "d52bbb69-79a8-4df7-eae9-44a153fe3388",
+        "outputId": "187207b7-595c-4082-dec9-fd06c1f00235",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
+          "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
         "(10 + 2) * 5"
       ],
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -521,10 +487,8 @@
               "60"
             ]
           },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 16
+          "metadata": {},
+          "execution_count": 14
         }
       ]
     },
@@ -546,35 +510,36 @@
         "a = '반갑습니다.'\n",
         "b = '테디입니다.'"
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "ybm6Kk9OOAhH",
-        "outputId": "d358f764-e9fa-4e3a-feae-5baccd5302d8",
+        "outputId": "9f534d18-3f88-46f3-a814-8c6bcf9d8338",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 36
         }
       },
       "source": [
         "a + b"
       ],
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
               "'반갑습니다.테디입니다.'"
-            ]
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
           },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 18
+          "metadata": {},
+          "execution_count": 16
         }
       ]
     },
@@ -582,16 +547,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "Hesb2VIVOBpM",
-        "outputId": "005871e0-6d69-4221-a72b-645480852aba",
+        "outputId": "14def6c5-c241-4e6c-f10b-7cdaaf1abdcf",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 169
+          "height": 170
         }
       },
       "source": [
         "a - b"
       ],
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "error",
@@ -600,7 +565,7 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-19-09bd029d0285>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ma\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-17-09bd029d0285>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ma\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
             "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'str' and 'str'"
           ]
         }
@@ -609,58 +574,24 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "NsyNzg4nOEIC",
-        "outputId": "25e7d75a-4454-4fe9-bdd1-29057081c600",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 169
-        }
+        "id": "NsyNzg4nOEIC"
       },
       "source": [
         "a * b"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-20-9bc1a869709f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ma\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m: can't multiply sequence by non-int of type 'str'"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "mtfQZmoWOGQj",
-        "outputId": "a94ead94-5186-4d8e-ddde-3198923bebf9",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 169
-        }
+        "id": "mtfQZmoWOGQj"
       },
       "source": [
         "a / b"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-21-d8e10abd5ab6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ma\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for /: 'str' and 'str'"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -686,31 +617,22 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "uTBZ7-FlORDW",
-        "outputId": "c148c96a-c993-4727-bd0c-f4f5b02744c2",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
+        "id": "uTBZ7-FlORDW"
       },
       "source": [
         "a + b"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "'1020'"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 27
-        }
-      ]
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "EVx0edOtmSr5"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
