--- a/Radio_Bieber_Mars_Lyrics.ipynb
+++ b/Radio_Bieber_Mars_Lyrics.ipynb
@@ -233,7 +233,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -428,24 +428,21 @@
         "with open('bieber.txt', 'r', encoding='utf-8') as f:\n",
         "    text = f.read()\n",
         "\n",
-        "# here are all the unique characters that occur in this text\n",
         "chars = sorted(list(set(text)))\n",
         "vocab_size = len(chars)\n",
-        "# create a mapping from characters to integers\n",
         "stoi = { ch:i for i,ch in enumerate(chars) }\n",
         "itos = { i:ch for i,ch in enumerate(chars) }\n",
-        "encode = lambda s: [stoi[c] for c in s] # encoder: take a string, output a list of integers\n",
-        "decode = lambda l: ''.join([itos[i] for i in l]) # decoder: take a list of integers, output a string\n",
+        "encode = lambda s: [stoi[c] for c in s]\n",
+        "decode = lambda l: ''.join([itos[i] for i in l])\n",
         "\n",
-        "# Train and test splits\n",
         "data = torch.tensor(encode(text), dtype=torch.long)\n",
-        "n = int(0.7*len(data)) # first % will be train, rest val\n",
+        "n = int(0.7*len(data))\n",
         "train_data = data[:n]\n",
         "val_data = data[n:]\n",
         "\n",
-        "# data loading\n",
+        "\n",
         "def get_batch(split):\n",
-        "    # generate a small batch of data of inputs x and targets y\n",
+        "\n",
         "    data = train_data if split == 'train' else val_data\n",
         "    ix = torch.randint(len(data) - block_size, (batch_size,))\n",
         "    x = torch.stack([data[i:i+block_size] for i in ix])\n",
@@ -481,16 +478,14 @@
         "\n",
         "    def forward(self, x):\n",
         "        B,T,C = x.shape\n",
-        "        k = self.key(x)   # (B,T,C)\n",
-        "        q = self.query(x) # (B,T,C)\n",
-        "        # compute attention scores (\"affinities\")\n",
-        "        wei = q @ k.transpose(-2,-1) * C**-0.5 # (B, T, C) @ (B, C, T) -> (B, T, T)\n",
-        "        wei = wei.masked_fill(self.tril[:T, :T] == 0, float('-inf')) # (B, T, T)\n",
-        "        wei = F.softmax(wei, dim=-1) # (B, T, T)\n",
+        "        k = self.key(x)\n",
+        "        q = self.query(x)\n",
+        "        wei = q @ k.transpose(-2,-1) * C**-0.5\n",
+        "        wei = wei.masked_fill(self.tril[:T, :T] == 0, float('-inf'))\n",
+        "        wei = F.softmax(wei, dim=-1)\n",
         "        wei = self.dropout(wei)\n",
-        "        # perform the weighted aggregation of the values\n",
-        "        v = self.value(x) # (B,T,C)\n",
-        "        out = wei @ v # (B, T, T) @ (B, T, C) -> (B, T, C)\n",
+        "        v = self.value(x)\n",
+        "        out = wei @ v\n",
         "        return out\n",
         "\n",
         "class MultiHeadAttention(nn.Module):\n",
@@ -508,7 +503,6 @@
         "        return out\n",
         "\n",
         "class FeedFoward(nn.Module):\n",
-        "    \"\"\" a simple linear layer followed by a non-linearity \"\"\"\n",
         "\n",
         "    def __init__(self, n_embd):\n",
         "        super().__init__()\n",
@@ -523,10 +517,8 @@
         "        return self.net(x)\n",
         "\n",
         "class Block(nn.Module):\n",
-        "    \"\"\" Transformer block: communication followed by computation \"\"\"\n",
         "\n",
         "    def __init__(self, n_embd, n_head):\n",
-        "        # n_embd: embedding dimension, n_head: the number of heads we'd like\n",
         "        super().__init__()\n",
         "        head_size = n_embd // n_head\n",
         "        self.sa = MultiHeadAttention(n_head, head_size)\n",
@@ -539,28 +531,25 @@
         "        x = x + self.ffwd(self.ln2(x))\n",
         "        return x\n",
         "\n",
-        "# super simple bigram model\n",
         "class BigramLanguageModel(nn.Module):\n",
         "\n",
         "    def __init__(self):\n",
         "        super().__init__()\n",
-        "        # each token directly reads off the logits for the next token from a lookup table\n",
         "        self.token_embedding_table = nn.Embedding(vocab_size, n_embd)\n",
         "        self.position_embedding_table = nn.Embedding(block_size, n_embd)\n",
         "        self.blocks = nn.Sequential(*[Block(n_embd, n_head=n_head) for _ in range(n_layer)])\n",
-        "        self.ln_f = nn.LayerNorm(n_embd) # final layer norm\n",
+        "        self.ln_f = nn.LayerNorm(n_embd)\n",
         "        self.lm_head = nn.Linear(n_embd, vocab_size)\n",
         "\n",
         "    def forward(self, idx, targets=None):\n",
         "        B, T = idx.shape\n",
         "\n",
-        "        # idx and targets are both (B,T) tensor of integers\n",
-        "        tok_emb = self.token_embedding_table(idx) # (B,T,C)\n",
-        "        pos_emb = self.position_embedding_table(torch.arange(T, device=device)) # (T,C)\n",
-        "        x = tok_emb + pos_emb # (B,T,C)\n",
-        "        x = self.blocks(x) # (B,T,C)\n",
-        "        x = self.ln_f(x) # (B,T,C)\n",
-        "        logits = self.lm_head(x) # (B,T,vocab_size)\n",
+        "        tok_emb = self.token_embedding_table(idx)\n",
+        "        pos_emb = self.position_embedding_table(torch.arange(T, device=device))\n",
+        "        x = tok_emb + pos_emb\n",
+        "        x = self.blocks(x)\n",
+        "        x = self.ln_f(x)\n",
+        "        logits = self.lm_head(x)\n",
         "\n",
         "        if targets is None:\n",
         "            loss = None\n",
@@ -573,47 +562,34 @@
         "        return logits, loss\n",
         "\n",
         "    def generate(self, idx, max_new_tokens):\n",
-        "        # idx is (B, T) array of indices in the current context\n",
         "        for _ in range(max_new_tokens):\n",
-        "            # crop idx to the last block_size tokens\n",
         "            idx_cond = idx[:, -block_size:]\n",
-        "            # get the predictions\n",
         "            logits, loss = self(idx_cond)\n",
-        "            # focus only on the last time step\n",
-        "            logits = logits[:, -1, :] # becomes (B, C)\n",
-        "            # apply softmax to get probabilities\n",
-        "            probs = F.softmax(logits, dim=-1) # (B, C)\n",
-        "            # sample from the distribution\n",
-        "            idx_next = torch.multinomial(probs, num_samples=1) # (B, 1)\n",
-        "            # append sampled index to the running sequence\n",
-        "            idx = torch.cat((idx, idx_next), dim=1) # (B, T+1)\n",
+        "            logits = logits[:, -1, :]\n",
+        "            probs = F.softmax(logits, dim=-1)\n",
+        "            idx_next = torch.multinomial(probs, num_samples=1)\n",
+        "            idx = torch.cat((idx, idx_next), dim=1)\n",
         "        return idx\n",
         "\n",
         "model = BigramLanguageModel()\n",
         "m = model.to(device)\n",
-        "# print the number of parameters in the model\n",
         "print(sum(p.numel() for p in m.parameters())/1e6, 'M parameters')\n",
         "\n",
-        "# create a PyTorch optimizer\n",
         "optimizer = torch.optim.AdamW(model.parameters(), lr=learning_rate)\n",
         "\n",
         "for iter in range(max_iters):\n",
         "\n",
-        "    # every once in a while evaluate the loss on train and val sets\n",
         "    if iter % eval_interval == 0 or iter == max_iters - 1:\n",
         "        losses = estimate_loss()\n",
         "        print(f\"step {iter}: train loss {losses['train']:.4f}, val loss {losses['val']:.4f}\")\n",
         "\n",
-        "    # sample a batch of data\n",
         "    xb, yb = get_batch('train')\n",
         "\n",
-        "    # evaluate the loss\n",
         "    logits, loss = model(xb, yb)\n",
         "    optimizer.zero_grad(set_to_none=True)\n",
         "    loss.backward()\n",
         "    optimizer.step()\n",
         "\n",
-        "# generate from the model\n",
         "context = torch.zeros((1, 1), dtype=torch.long, device=device)\n",
         "print(decode(m.generate(context, max_new_tokens=2000)[0].tolist()))\n"
       ]
@@ -631,7 +607,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP4IAusRshsmpM7zVNyWsOZ",
+      "authorship_tag": "ABX9TyPNglAMr22Q50YBPBlYqEhg",
       "include_colab_link": true
     },
     "kernelspec": {
